migration: Fix migration with nonexistent default GConf profile

When the GConf prefs are corrupt and point to a default profile that doesn't
exist, we were converting the profiles but leaving the default value for the
default profile, so creating new terminals with the default profile would fail.

https://bugzilla.gnome.org/show_bug.cgi?id=691347